2008-01-18 Josh Kropf <josh@slashdev.ca>

	* lemonmenu.cpp (launch_game):
	Platform specific handing (windows, linux) of window when launching mame.


 Jan 03/2008
=======================
+ create separate thread to launch mame which eliminates the event queue
  flushing and special minimize/maximize handling on Linux
+ made favorite view the default view
+ added patch to restore lemon launcher on win32 when mame exits

 Dec 27/2007
=======================
+ added 3 'view' states: favorites, most played, and genre view
+ lalt + left/right to switch views
+ removed toggle and reload keys... menu can be reloaded by switching views
+ added sqlite3 as a dependency
+ using sqlite database for games list
+ update counter in games db each time rom is played

 Dec 23/2007
=======================
+ some code cleanup in preparation to use sqlite for the games list

 Dec 20/2007
=======================
+ added a 'rotate' option for controlling the orientation of the interface
+ any 'skin' verbiage has been changed to 'theme'
+ fixed possible memory leak in config file resolving function

 Nov 27/2007
=======================
+ use stat in layout class to test if a file exists
+ added support for relative paths in theme files

 Nov 26/2007
=======================
+ auto-sort root menu
+ fixed list item being drawn below bottom bounds

 Nov 21/2007
=======================
+ added menu sorting in alphabetic order (enabled by default)
+ removed the double mapping of controls for certain functions
+ added alphabetic page up/down control
+ changed around key mapping option names to reflect their logical use

 Nov 10/2007
=======================
+ added option for setting skin file path
+ fixed bug in menu class (garbage in selected index)
+ appended .sample to all sample conf files
+ set some reasonable defaults for skin/layout
+ fixed missing %r in default mame option
+ removed exception throw when snap option is missing %r (warn instead)

 Nov 09/2007
=======================