@@ -5,3 +5,5 @@ pkgdata_DATA = lemonlauncher.conf.sample keycodes.txt \
 theme.conf.sample grey-theme.tar.gz blue-theme.tar.gz
 
 EXTRA_DIST = $(pkgdata_DATA) VeraBd.ttf
+
+ACLOCAL_AMFLAGS = -I m4
