@@ -13,6 +13,7 @@ AC_LANG_CPLUSPLUS
 
 AC_PROG_CC
 AC_PROG_CXX
+AC_CHECK_PROGS(BUILD_CC, gcc cc, $CC)
 
 AC_CXX_NAMESPACES
 AC_CXX_HAVE_STL
